fix alignment on embedded video and map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .bg-container-about {
-    background-color: #e8e8e8;
+  background-color: #e8e8e8;
 }
 
 /*---------------------------------------------------Header */
@@ -58,13 +58,13 @@
 }
 
 .about-top-image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .media-body {
-    padding-top: 40px;
-    padding-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 /*---------------------------------------------------Section */
@@ -170,10 +170,20 @@
 }
 
 .gallery-items {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 400;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  color: #3e3b3b;
+  background-color: #e8e8e8;
+}
+
+.location {
+    width: 100%;
+    height: 50vh;
+    border: 1px solid #3e3b3b;
+}
+
+.tel-button {
     color: #3e3b3b;
-    background-color: #e8e8e8;
 }
 
 /*---------------------------------------------------Footer */
@@ -211,8 +221,8 @@
 /*---------------------------------------------------Media queries */
 
 @media screen and (max-width: 575px) {
-    .media {
-        display: flex;
-        flex-direction: column;
-    }
+  .media {
+    display: flex;
+    flex-direction: column;
+  }
 }
